# aoc2022

./: Cargo.toml  README.md  get_example.py  get_input.sh
src/: day11.rs  day13.rs  day16.rs  day19.rs  day21.rs  day22.rs  day23.rs  io.rs  lib.rs  main.rs  old_days.rs  string.rs
