[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "*"
ndarray = "*"
rayon = "*"
integer-sqrt = "*"
nalgebra = "0.25"
once_cell = "*"
num-traits = "*"
anyhow = "*"
colored = "*"
reqwest = {version = "*", features=["blocking", "cookies"]}
scraper = "*"
itertools = "*"
priority-queue = "*"
tqdm = "*"
fastrand = "*"
